# longpass

./: CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  dot-longpass.txt  longpass  longpass.py  longpass.rb  make-japanese.rb  pyproject.toml
cache/rulesets/: cache.md
diceware/: diceware-jp.txt
lib/longpass/: README.md  diceware.txt  eff4-3.txt  noun.txt  syl-a.txt  syl-b.txt  tolkien.txt  us-fem.txt  us-sur.txt
longpass_data/: __init__.py  adj.txt  alphanum.txt  japanese.txt  patterns.txt  printable.txt  punct.txt  us-male.txt  var.txt
rulesets/: eff4dice1.txt  eff4dice2.txt  eff5dice.txt  effprefix.txt  japanese.txt  printable.txt  tolkien.txt
